fix: fixed body overflow

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ html {
 }
 
 body {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-color: var(--color-bg);
 }
